--- a/scss/_style.scss
+++ b/scss/_style.scss
@@ -18,65 +18,9 @@
 	font-size: rem-calc(18);
 }
 
-
-
-
-
-/*=======================
------ FONT INCLUDES -----
-=======================*/
-
-@font-face {
-    font-family: 'titillium';
-    src: url('fonts/titillium-bold-webfont.eot');
-    src: url('fonts/titillium-bold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/titillium-bold-webfont.woff2') format('woff2'),
-         url('fonts/titillium-bold-webfont.woff') format('woff'),
-         url('fonts/titillium-bold-webfont.ttf') format('truetype'),
-         url('fonts/titillium-bold-webfont.svg#titillium') format('svg');
-    font-weight: normal;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'titillium';
-    src: url('fonts/titillium-regular-webfont.eot');
-    src: url('fonts/titillium-regular-webfont.eot?#iefix') format('embedded-opentype'),
-         url('fonts/titillium-regular-webfont.woff2') format('woff2'),
-         url('fonts/titillium-regular-webfont.woff') format('woff'),
-         url('fonts/titillium-regular-webfont.ttf') format('truetype'),
-         url('fonts/titillium-regular-webfont.svg#titillium') format('svg');
-    font-weight: bold;
-    font-style: normal;
-
-}
-
-@font-face {
-    font-family: 'titillium';
-    src: url('titillium-regularitalic-webfont.eot');
-    src: url('titillium-regularitalic-webfont.eot?#iefix') format('embedded-opentype'),
-         url('titillium-regularitalic-webfont.woff2') format('woff2'),
-         url('titillium-regularitalic-webfont.woff') format('woff'),
-         url('titillium-regularitalic-webfont.ttf') format('truetype'),
-         url('titillium-regularitalic-webfont.svg#titillium') format('svg');
-    font-weight: normal;
-    font-style: italic;
-
-}
-
-@font-face {
-    font-family: 'titillium';
-    src: url('titillium-semibold-webfont.eot');
-    src: url('titillium-semibold-webfont.eot?#iefix') format('embedded-opentype'),
-         url('titillium-semibold-webfont.woff2') format('woff2'),
-         url('titillium-semibold-webfont.woff') format('woff'),
-         url('titillium-semibold-webfont.ttf') format('truetype'),
-         url('titillium-semibold-webfont.svg#titillium') format('svg');
-    font-weight: semibold;
-    font-style: normal;
-
-}
+	.button-book-now {
+		margin-bottom: 0;
+	}
 
 
 
@@ -163,6 +107,10 @@ h1 {
 p {
 	color: $paragraph-grey;
 }
+
+
+
+
 
 /*========================
 -------- LOGO BAR --------
@@ -285,7 +233,7 @@ p {
 =========================*/
 
 .call-to-action-bg {
-	background: url('/img/hero-img.png');
+	background: url('../img/hero-img.png');
 	height: 450px;
 	background-position: center;
 	background-size: cover;
@@ -337,11 +285,9 @@ p {
 	}
 }
 
-
-
-
-
-
-
+.featured-link-text {
+	position: relative;
+	top: 7px;
+}
 
 
